[package]
name = "backend-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1.38", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "uuid"] }
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
bcrypt = "0.15"
validator = { version = "0.18", features = ["derive"] }
thiserror = "1.0" # elegantní zpracování chyb
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
url = "2.5"